service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aquila-service
spec:
  selector:
    app: aquila
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
